Extension comparisons should be case-insensitive.  Bug 223055, r=biesi, sr=darin